--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "baseHref": "/online-shop-application-using-angular-signalStore/",
-            "outputPath": "docs_/",
+            "outputPath": "docs",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "stylePreprocessorOptions": {
